# msh2gprs

./: .gitignore  .gitmodules  CMakeLists.txt  Cell.hpp  Circle.h  Collision.cpp  Collision.h  CollisionGJK.hpp  Collisions.hpp  GJK_Algorithm.hpp  Line.hpp  Plane.cpp  Plane.hpp  Point.hpp  Polygon.cpp  Polygon.hpp  Polyhedra.cpp  Polyhedra.h  Polyhedron.hpp  README.md  Rectangle.hpp  Shape.hpp  Square.cpp  Square.h  Vector.cpp  Vector.h  element.cpp  element.hpp  femout.cpp  main.cpp  makefile  renum.cpp  renum.hpp  simdata.cpp  simdata.hpp  simdata_conf.json  transes.hpp  utils.hpp
src/angem/: Basis.hpp  CMakeLists.txt  Circle.cpp  CollisionGJK.hpp  Collisions.hpp  Exceptions.hpp  Hexahedron.hpp  Line.hpp  Plane.hpp  Point.hpp  PointSet.cpp  PointSet.hpp  PolyGroup.hpp  Polygon.hpp  Polyhedron.hpp  PolyhedronFactory.hpp  Pyramid.hpp  Quad.hpp  Rectangle.hpp  Shape.hpp  SurfaceMesh.hpp  Tetrahedron.hpp  Wedge.hpp  utils.hpp
src/gprs-data/: CMakeLists.txt  ConnectionMap.hpp  FlowData.cpp  FlowData.hpp  GElement.hpp  LayerDataMSRSB.hpp  MetisInterface.hpp  MultiScaleDataMSRSB.cpp  MultiScaleDataMSRSB.hpp  MultiScaleDataMech.cpp  MultiScaleDataMech.hpp  MultiScaleOutputData.hpp  OutputDataGPRS.cpp  OutputDataGPRS.hpp  OutputDataVTK.cpp  OutputDataVTK.hpp  SimdataConfig.hpp  UnionFind.cpp  UnionFind.hpp  UnionFindWrapper.hpp  VTKWriter.cpp  VTKWriter.hpp  Well.cpp  Well.hpp  connection_map_iterator.hpp  element.hpp  femout.cpp  femout.hpp  simdata.cpp  simdata.hpp  transes.cpp  transes.hpp
src/logger/: CMakeLists.txt
src/logger/src/: Color.cpp  Logger.cpp  ProgressBar.cpp
src/mesh/: CMakeLists.txt  CartesianMeshBuilder.cpp  CartesianMeshBuilder.hpp  CartesianMeshParameters.hpp  Cell.cpp  Cell.hpp  CellIterator.hpp  CellSplitter.cpp  CellSplitter.hpp  Face.cpp  Face.hpp  FaceIterator.hpp  FaceSplitter.cpp  FaceSplitter.hpp  FractureTip.cpp  FractureTip.hpp  Groups.hpp  Mesh.cpp  Mesh.hpp  MeshStatsComputer.cpp  MeshStatsComputer.hpp  MetisData.hpp  RefinementAspectRatio.cpp  RefinementAspectRatio.hpp  ShapeID.cpp  ShapeID.hpp  Subdivision.cpp  Subdivision.hpp  SurfaceMesh.hpp  UnionFind.hpp  active_cell_const_iterator.cpp  active_cell_const_iterator.hpp  active_cell_iterator.cpp  active_cell_iterator.hpp  active_face_const_iterator.cpp  active_face_const_iterator.hpp  cell_const_iterator.cpp  cell_const_iterator.hpp  cell_iterator.cpp  cell_iterator.hpp  (+18 more)
src/mesh/io/: VTKReader.cpp  VTKReader.hpp  VTKWriter.cpp  VTKWriter.hpp
src/msh2gprs/: CMakeLists.txt
src/muparser/: CMakeLists.txt
src/parsers/: CMakeLists.txt  GmshReader.cpp  GmshReader.hpp  JsonParser.cpp  JsonParser.hpp  Parser.cpp  Parser.hpp  YamlParser.cpp  YamlParser.hpp
src/preprocessor/: BoundaryConditionManager.cpp  BoundaryConditionManager.hpp  CMakeLists.txt  CellPropertyManager.cpp  CellPropertyManager.hpp  ConnectionMap.hpp  DiscreteFractureManager.cpp  DiscreteFractureManager.hpp  DiscretizationDFEM.cpp  DiscretizationDFEM.hpp  DiscretizationFEM.cpp  DiscretizationFEM.hpp  DoFManager.cpp  DoFManager.hpp  EmbeddedFractureManager.cpp  EmbeddedFractureManager.hpp  FlowData.cpp  GElement.hpp  GlobalOpts.cpp  GlobalOpts.hpp  GridCellNumberingManager.cpp  GridCellNumberingManager.hpp  GridEntityNumberingManager.cpp  GridEntityNumberingManager.hpp  GridGeneratorINSIM.cpp  GridGeneratorINSIM.hpp  INSIMWellManager.cpp  INSIMWellManager.hpp  MultiScaleDataMSRSB.cpp  MultiScaleDataMSRSB.hpp  MultiScaleDataMech.cpp  MultiScaleDataMech.hpp  OutputDataGPRS.cpp  OutputDataGPRS.hpp  OutputDataPostprocessor.cpp  OutputDataPostprocessor.hpp  OutputDataVTK.cpp  OutputDataVTK.hpp  Preprocessor.cpp  Preprocessor.hpp  (+24 more)
src/preprocessor/algorithms/: DijkstraSP.hpp  DijkstraSubgraph.cpp  DijkstraSubgraph.hpp  DirectedEdge.hpp  EdgeWeightedDigraph.hpp  EdgeWeightedGraph.cpp  EdgeWeightedGraph.hpp  FlowEdge.hpp  FlowNetwork.hpp  FordFulkerson.hpp  IndexMinPQ.cpp  IndexMinPQ.hpp  SingleSourceShortestPath.hpp  UndirectedEdge.hpp
src/preprocessor/bc_expressions/: location_functions.cpp  location_functions.hpp  value_functions.cpp  value_functions.hpp
src/preprocessor/config/: FEMMethod.hpp  FiniteElementConfig.hpp  MeshConfig.hpp  MultiscaleConfig.hpp  OutputConfig.hpp  OutputConfigGPRS.hpp  OutputConfigINSIM.hpp  OutputConfigPostprocessor.hpp  OutputConfigVTK.hpp  PolyhedralFEMSubdivision.hpp  PropertyConfig.hpp  SolverType.hpp  VTKOutputConfig.hpp  WellConfig.hpp
src/preprocessor/discretization/: ConnectionData.hpp  ControlVolumeData.hpp  DiscretizationBase.cpp  DiscretizationBase.hpp  DiscretizationDFM.cpp  DiscretizationDFM.hpp  DiscretizationEDFM.cpp  DiscretizationEDFM.hpp  DiscretizationTPFA.cpp  DiscretizationTPFA.hpp  DoFNumbering.hpp  find_triplet.cpp
src/preprocessor/gmsh_interface/: FeValues.cpp  FeValues.hpp  GmshInterface.cpp  GmshInterface.hpp  element_types.cpp  element_types.hpp
src/preprocessor/insim_tools/: GridGeneratorINSIM.cpp  GridGeneratorINSIM.hpp  MitchellBestCandidate.cpp  MitchellBestCandidate.hpp
src/preprocessor/intersections/: GridIntersectionSearcher.cpp  GridIntersectionSearcher.hpp  Mapper.cpp  Mapper.hpp  UniformCartesianGrid.cpp  UniformCartesianGrid.hpp
src/preprocessor/managers/: BoundaryConditionManager.cpp  BoundaryConditionManager.hpp  CellPropertyManager.cpp  CellPropertyManager.hpp  DiscreteFractureManager.cpp  DiscreteFractureManager.hpp  DoFManager.cpp  DoFManager.hpp  EmbeddedFractureManager.cpp  INSIMWellManager.cpp  INSIMWellManager.hpp  WellManager.cpp
src/preprocessor/multiscale/: EdgeWeightedDigraph.hpp  EdgeWeightedGraph.cpp  EdgeWeightedGraph.hpp  GeometricPartition.cpp  GeometricPartition.hpp  Idea.cpp  Idea.hpp  IndexMinPQ.hpp  MSFlow.cpp  MSFlow.hpp  MetisInterface.cpp  MetisInterface.hpp  MultiScaleDataMSRSB.cpp  MultiScaleDataMSRSB.hpp  MultiScaleDataMech.cpp  MultiScaleOutputData.hpp  ShapeFunctionSolver.cpp  ShapeFunctionSolver.hpp  SingleSourceShortestPath.hpp  SupportRegionsBase.cpp  SupportRegionsBase.hpp  SupportRegionsFVMGraph.cpp  SupportRegionsFVMGraph.hpp  SupportRegionsLaplaceMod.cpp  SupportRegionsLaplaceMod.hpp  (+1 more)
src/progressbar/: CMakeLists.txt
(+274 files in other folders)
